--- a/about.html
+++ b/about.html
@@ -9,7 +9,7 @@
 </p>
 <h3>Open Source</h3>
 <p>
-    This website's text is opened source on <a href="https://github.com/jproko23/391OS" target="_blank">GitHub</a> with <a href="https://github.com/paizhangpi/391os36_web/blob/main/LICENSE" target="_blank">MIT License</a>Based on <a href ="https://github.com/paizhangpi/391os36_web" target ="blank">Paizhang's<a/></aPaizhang> Design
+    This website's text is opened source on <a href="https://github.com/jproko23/391OS" target="_blank">GitHub</a> with <a href="https://github.com/paizhangpi/391os36_web/blob/main/LICENSE" target="_blank">MIT License</a>Based on <a href ="https://github.com/paizhangpi/391os36_web" target ="blank">Paizhang's</a> Design.
 </p>
 <h3>Make Your Website</h3>
 <p>
