--- a/about.html
+++ b/about.html
@@ -1,15 +1,17 @@
 <!doctype html>
-<title>About 391OS-36</title>
-<h2>About 391OS-36</h2>
+<title>About</title>
+<h2>About Our OS</h2>
 <hr>
 <h3>Acknowledgements</h3>
 <p>
     This operating system is the 3rd MP of <a href="https://courses.grainger.illinois.edu/ECE391/sp2023/" target="_blank">ECE 391 Spring 2023</a>, Computer Systems Engineering,<br>
-    <a href="https://ece.illinois.edu/" target="_blank">Department of Electrical and Computer Engineering</a>, <a href="https://illinois.edu/" target="_blank">University of Illinois, Urbana-Champaign</a>.
+    <a href="https://ece.illinois.edu/" target="_blank">Department of Electrical and Computer Engineering</a>, <a href="https://illinois.edu/" target="_blank">University of Illinois, Urbana-Champaign</a><br>
+    The project was made in collaboration with <a href="simbergos.info" target="_blank">Steven</a>, Will, and Manas.
+
 </p>
 <h3>Open Source</h3>
 <p>
-    This website's text is opened source on <a href="https://github.com/jproko23/391OS" target="_blank">GitHub</a> with <a href="https://github.com/paizhangpi/391os36_web/blob/main/LICENSE" target="_blank">MIT License</a>Based on <a href ="https://github.com/paizhangpi/391os36_web" target ="blank">Paizhang's</a> Design.
+    This website's text is opened source on <a href="https://github.com/jproko23/391OS" target="_blank">GitHub</a> with <a href="https://github.com/paizhangpi/391os36_web/blob/main/LICENSE" target="_blank">MIT License </a>Based on <a href ="https://github.com/paizhangpi/391os36_web" target ="blank">Paizhang's</a> Design.
 </p>
 <h3>Make Your Website</h3>
 <p>
