--- a/about.html
+++ b/about.html
@@ -1,12 +1,13 @@
 <!doctype html>
-<title>About</title>
+<head><title>About</title></head>
+<body>
 <h2>About Our OS</h2>
 <hr>
 <h3>Acknowledgements</h3>
 <p>
     This operating system is the 3rd MP of <a href="https://courses.grainger.illinois.edu/ECE391/sp2023/" target="_blank">ECE 391 Spring 2023</a>, Computer Systems Engineering,<br>
     <a href="https://ece.illinois.edu/" target="_blank">Department of Electrical and Computer Engineering</a>, <a href="https://illinois.edu/" target="_blank">University of Illinois, Urbana-Champaign</a><br>
-    The project was made in collaboration with <a href="https://simbergos.info/" target="_blank">Steven</a>, Will, and Manas.
+    The project was made in collaboration with <a href="https://simbergos.info/" target="_blank">Stephen</a>, <a href="https://coombsos.info/" target="_blank">Will</a>, and Manas.
 
 </p>
 <h3>Open Source</h3>
@@ -19,5 +20,12 @@
     The website design comes directly from the <a href="https://courses.grainger.illinois.edu/ECE391/sp2023/" target="_blank">ECE 391 website</a>.<br>
     The font used in the emulator is IBM VGA, which was made from the IBM VGA video BIOS.<br>
 </p>
+<h3>Contact</h3>
+<p>
+    jproko23@gmail.com (me) <br>
+    stephenhsimberg@gmail.com <br>
+    williamcoombs325@gmail.com <br>
+</p>
 
 <hr>
+</body>
