--- a/demo.html
+++ b/demo.html
@@ -83,7 +83,10 @@
         )
     }
 </script>
+<head>
 <title>OS Emulator</title>
+</head>
+<body>
 <h2>Demo</h2>
 <hr>
 <div id="screen_container">
@@ -118,3 +121,4 @@
     </ul>
 </p>
 <hr>
+</body>
