--- a/overview.html
+++ b/overview.html
@@ -18,7 +18,10 @@
         padding-right: 20px;
     }
 </style>
-<title>391OS-34 Technical Overview</title>
+<head>
+<title>OS-34 Technical Overview</title>
+</head>
+<body>
 <h2 id="top">Technical Overview</h2>
 <hr>
 <div id="toc_container">
@@ -412,3 +415,4 @@
 </i>
 <hr>
 <b><a href="#top">Back to Top</a></b>
+</body>
