--- a/popup.html
+++ b/popup.html
@@ -56,7 +56,9 @@
         });
     }
 </script>
-<title>391OS-36 Online Demo</title>
+<head><title>OS-34 Online Demo</title></head>
+<body>
+
 <div id="screen_container">
     <div id="emu_text"></div>
     <canvas id="emu_screen"></canvas>
@@ -65,3 +67,4 @@
         Press Ctrl+S to enable/disable scheduler, so it can mimic the environment prior to CP5.</b>
     </p>
 </div>
+</body>
