--- a/toc.html
+++ b/toc.html
@@ -1,12 +1,14 @@
 <!doctype html>
+<h2 align="center">OS-34</h2>
+<h5 align="center">By Jack, Will, Stephen, and Manas</h5>
 <h3 align="center">ECE 391</h3>
 <h4 align="center">Computer Systems Engineering</h4>
-<h5 align="center">391OS-34</h5>
+
 <hr>
 <p>
     <a href="demo.html" target="main">Online Demo</a><br>
     <a href="overview.html" target="main">Tech Overview</a><br>
-    <a href="about.html" target="main">About 391OS-34</a><br>
+    <a href="about.html" target="main">About OS-34</a><br>
 </p>
 <hr>
 <p>
