--- a/index.html
+++ b/index.html
@@ -1,7 +1,10 @@
 <!doctype html>
-<title>391OS-34</title>
+<head>
+<title>OS-34</title>
+</head>
 <link rel="icon" type="image/x-icon" href="./penguin.png">
 <frameset border="1" cols="150,*">
     <frame name="toc" src="toc.html">
     <frame name="main" src="demo.html">
 </frameset>
+<body></body>
