--- a/toc.html
+++ b/toc.html
@@ -6,7 +6,7 @@
 
 <hr>
 <p>
-    <a href="demo.html" target="main">Online Demo</a><br>
+    <a href="demo.html" target="main">Our OS</a><br>
     <a href="overview.html" target="main">Tech Overview</a><br>
     <a href="about.html" target="main">About OS-34</a><br>
 </p>
