--- a/overview.html
+++ b/overview.html
@@ -1,7 +1,22 @@
 <!doctype html>
 <style>
+    @font-face
+    {   
+
+        font-family: "tifax";
+        src: url("./resources/tifax-font/Tifax-AJ7g.tff") format("tff");
+        
+    }
+    /*
+    body 
+    {
+        color: #5DF64A;
+        background-color: #1A1A1D;
+    }*/
+
     #toc_container
     {
+        font-family: "tifax";
         border: 2px solid #aaa;
         display: table;
         font-size: 95%;
@@ -9,6 +24,7 @@
 
     #toc_title
     {
+        font-family: "tifax";
         font-weight: bold;
         text-align: center;
     }
@@ -17,6 +33,7 @@
     {
         padding-right: 20px;
     }
+
 </style>
 <head>
 <title>OS-34 Technical Overview</title>
@@ -44,14 +61,14 @@
             <li><a href="#proctrl">Process Control</a></li>
             <li><a href="#multerm">Multiterminals</a></li>
             <li><a href="#scheduler">Scheduler</a></li>
+            <li><a href="#additional">Additional Features</a></li>
+            <!---
             <li><a href="#sig">Signals</a></li>
             <li><a href="#pmgr">Process Manager</a></li>
+            -->
         </ul>
     </p>
 </div>
-<p>
-    <b>Note:</b> All <i>italic</i> words in this document are for extra credits or design specific and not required for your MP3.<br>
-</p>
 <h3 id="cmd">Shell Commands</h3>
 <table border="2" cellpadding="5">
     <tr>
@@ -89,6 +106,7 @@
         <td>Switch to Terminal 3</td>
         <td>(See below)</td>
     </tr>
+    <!---
     <tr>
         <td>Ctrl+C</td>
         <td>Interrupt</td>
@@ -119,6 +137,7 @@
         <td><i>Start 391OS-36 Help Center</i></td>
         <td><i>Show combination keys and about info</i></td>
     </tr>   
+    -->
 </table>
 <h3 id="fsdir">File System Directory</h3>
 <table border="2" cellpadding="5">
@@ -235,20 +254,21 @@
 </p>
 <h3 id="dev">Supported Devices</h3>
 <p>
-    391OS-36 has drivers for the standard keyboard, programmable interval timer (PIT), real-time clock (RTC), and terminal.<br>
+    391OS-34 has drivers for the standard keyboard, programmable interval timer (PIT), real-time clock (RTC), and terminal.<br>
     The standard keyboard driver adds support for capital letter handling and combinational keys.<br>
-    The PIT driver is used to handle the scheduling and can be turned off (see below).<br>
+    The PIT driver is used to handle the scheduling.<br>
     The RTC driver supports frenquency adjusting and is "virtualized," so each process has its own RTC instance (see below).<br>
-    The terminal driver is for standard input and output and works with keyboard driver. The input buffer is limited at 128-characters.<br>
+    The Terminal driver is for standard input and output and works with keyboard driver. The input buffer is limited at 128-characters.<br>
+    The Mouse driver is use to enable mouse functionality and works with the GUI and paint.<br>
 </p>
 <h3 id="memaddr">Memory Addressing</h3>
 <p>
-    391OS-36 bypassed segmentation just like any modern operation systems, only paging was used for memory addressing.<br>
+    391OS-34 bypassed segmentation just like any modern operation systems, only paging was used for memory addressing.<br>
     The memory layout is fixed (see below).<br>
 </p>
 <h3 id="pmem">Physical Memory Layout</h3>
 <p>
-    From low to high, 391OS-36 utilized 32MB of physical memory:<br>
+    From low to high, 391OS-34 utilized 32MB of physical memory:<br>
     <ul>
         <li>4MB space with several 4KB space for the VRAM</li>
         <li>4MB space for kernel data and stacks</li>
@@ -257,7 +277,7 @@
 </p>
 <h3 id="vmem">Virtual Memory Layout</h3>
 <p>
-    From low to high, 391OS-36 utilized the following in the 4GB virtual memory space:<br>
+    From low to high, 391OS-34 utilized the following in the 4GB virtual memory space:<br>
     <ul>
         <li>4MB PT with several 4KB global superviser pages for the VRAM</li>
         <li>4MB global superviser page for the kernel</li>
@@ -267,13 +287,13 @@
 </p>
 <h3 id="fs">File System</h3>
 <p>
-    The 391OS-36 FS has a total size of 8MB, and is divided into 4KB blocks of one boot block, inodes, and data blocks.<br>
+    The 391OS-34 FS has a total size of 8MB, and is divided into 4KB blocks of one boot block, inodes, and data blocks.<br>
     Each boot block can track up to 62 inodes and one root directory, and each inode can track up to 1023 data blocks.<br>
     The limitations are up to 62 files of 4092KB size and 32 characters name length. Also, it does not support hierarchy and is read-only.<br>
 </p>
 <h3 id="fsabst">File System Abstraction</h3>
 <p>
-    391OS-36 treat any files, device (RTC), and directory as files. Each process has a dynamic file descriptor (FD) that supports 8 open files.<br>
+    391OS-34 treats any files, device (RTC), and directory as files. Each process has a dynamic file descriptor (FD) that supports 8 open files.<br>
     According to the file type, each entry tracks inode, position, flags, and an operation jump table, and is utilized by syscalls (see below).<br>
 </p>
 <h3 id="syscall">System Calls</h3>
@@ -314,6 +334,7 @@
         <td>vidmap</td>
         <td>Giving user-level access to the VRAM and map it to the user space.</td>
     </tr>  
+    <!---
     <tr>
         <td><i>set_handler</i></td>
         <td><i>Set custom handler for signal (see below).</i></td>
@@ -321,31 +342,34 @@
     <tr>
         <td><i>sigreturn</i></td>
         <td><i>Restore the hardware context from signal handler (see below).</i></td>
-    </tr>  
+    </tr> 
+    --> 
 </table>
+<!---
 <p>
     <i>Please note that the last two system calls are for extra credit; they are not required.</i><br>
     These system calls are handled accordingly in kernel from linkage.<br>
 </p>
+--->
 <h3 id="proctrl">Process Control</h3>
 <p>
-    391OS-36 supports up to 6 processes. Each process holds a process control block (PCB) in the kernel.<br>
+    391OS-34 supports up to 6 processes. Each process holds a process control block (PCB) in the kernel.<br>
     The kernel manages the PCB allocation by a custom design called <i>PCB pool</i>.<br>
     Each PCB tracks the allocated process ID (PID), parent PID, terminal ID, kernel/user stacks, FD, etc.<br>
 </p>
 <h3 id="multerm">Multiterminals</h3>
 <p>
-    391OS-36 supports up to 3 terminals. Each terminal holds a custom design called <i>terminal info (TI) block</i> in the kernel.<br>
-    Each <i>TI block</i> tracks the PCB pointer, coordinations, RTC parameters, etc.<br>
+    391OS-34 supports up to 3 terminals. <!---Each terminal holds a custom design called <i>terminal info (TI) block</i> in the kernel.<br>
+    Each <i>TI block</i> tracks the PCB pointer, coordinations, RTC parameters, etc.---><br>
 </p>
 <h3 id="scheduler">Scheduler</h3>
 <p>
-    391OS-36 supports a round-robin scheduler that can be turned off and a virtualized RTC for each process.<br>
-    The scheduler schedules 3 processes that is shown on each terminal, called active processes, so they can multitask.<br>
-    But only one process is "actually" running, called running process.<br>
-    Turning off scheduler will disable the multitasking, but it mimics the environment for your work prior to CP5.<br>
+    391OS-34 supports a round-robin schedulerand a virtualized RTC for each process.<br>
+    The scheduler schedules 3 processes that are shown on each terminal, called active processes, so they can multitask.<br>
+    But only one process is "actually" running, called the running process.<br>
     
 </p>
+<!---
 <i>
     <h3 id="sig">Signals</h3>
     <p>
@@ -412,6 +436,21 @@
         It is design specific to 391OS-36, so it is definiately not required.<br>
         Please note this utility's kill function does not work the scheduler (please check other known issues in the demo page).<br>
     </p>
+</i>
+-->
+<i>
+<h3 id="additional">Additional Features</h3>
+    <ul>
+        <li>GUI: Execute a program by clicking the name in the GUI window, press escape to return to the list of programs</li>
+        <li>Autocomplete: Press Tab to complete commands and file names</li>
+        <li>Up Arrow restores previous command</li>
+        <li>"clear" command resets the terminal window</li>
+        <li>Paint: left-click and hold the mouse to draw, right-click to cycle colors</li>
+        <li>Custom Colors: Use the "color" command to choose new text and background colors</li>
+    </ul>
+<p>
+
+</p>
 </i>
 <hr>
 <b><a href="#top">Back to Top</a></b>
