--- a/popup.html
+++ b/popup.html
@@ -63,8 +63,9 @@
     <div id="emu_text"></div>
     <canvas id="emu_screen"></canvas>
     <p id="hint_text">
-        <b>Press Alt+F1/F2/F3 to switch terminal. Press Ctrl+C to interrupt. Press Ctrl+H to get help.<br>
-        Press Ctrl+S to enable/disable scheduler, so it can mimic the environment prior to CP5.</b>
+        <b>Press Alt+F1/F2/F3 to switch terminal<br>
+
+        </b>
     </p>
 </div>
 </body>
