--- a/overview.html
+++ b/overview.html
@@ -13,6 +13,35 @@
         color: #5DF64A;
         background-color: #1A1A1D;
     }*/
+    
+    body 
+    {
+        color: #c0c3c0;
+        background-color: #131719;
+    }
+
+    h1,
+    h2, 
+    h3, 
+    h4, 
+    h5, 
+    h6 {
+        color: #33FF00;
+    }
+
+    a:link {
+        color: #33FF00; 
+        background-color: transparent;
+    }
+    
+    a:visited {
+        color: #4c873f;
+        background-color: transparent;
+    }
+
+    th {
+       background-color:#4c873f; /* #092d01;*/
+    }
 
     #toc_container
     {
