--- a/popup.html
+++ b/popup.html
@@ -6,6 +6,12 @@
         src: url("./demo/web_ibm_vga_8x16.woff") format("woff");
     }
 
+    body 
+    {
+        color: #c0c3c0;
+        background-color: #131719;
+    }
+
     #screen_container
     {
         padding: 20px;
