--- a/toc.html
+++ b/toc.html
@@ -1,4 +1,26 @@
 <!doctype html>
+<style>
+    body 
+    {
+        color: #c0c3c0;
+        background-color: #131719;
+    }
+
+    
+    h2 {
+        color: #33FF00;
+    }
+
+    a:link {
+        color: #33FF00; 
+        background-color: transparent;
+    }
+    
+    a:visited {
+        color: #4c873f;
+        background-color: transparent;
+    }
+</style>
 <h2 align="center">OS-34</h2>
 <h5 align="center">By Jack, Will, Stephen, and Manas</h5>
 <h3 align="center">ECE 391</h3>
