--- a/about.html
+++ b/about.html
@@ -1,4 +1,31 @@
 <!doctype html>
+<style>
+    body 
+    {
+        color: #edefed;
+        background-color: #131719;
+    }
+
+    h1,
+    h2, 
+    h3, 
+    h4, 
+    h5, 
+    h6 {
+        color: #33FF00;
+    }
+
+    a:link {
+        color: #33FF00; 
+        background-color: transparent;
+    }
+    
+    a:visited {
+        color: #4c873f;
+        background-color: transparent;
+    }
+
+</style>
 <head><title>About</title></head>
 <body>
 <h2>About Our OS</h2>
