--- a/demo.html
+++ b/demo.html
@@ -13,6 +13,31 @@
         background-color: #1A1A1D;
     }*/
 
+    body 
+    {
+        color: #c0c3c0;
+        background-color: #131719;
+    }
+
+    h1,
+    h2, 
+    h3, 
+    h4, 
+    h5, 
+    h6 {
+        color: #33FF00;
+    }
+
+    a:link {
+        color: #33FF00; 
+        background-color: transparent;
+    }
+    
+    a:visited {
+        color: #4c873f;
+        background-color: transparent;
+    }
+
     #screen_container
     {
         border: 2px solid #aaa;
@@ -111,7 +136,7 @@
     </p>
 </div>
 <div id="known_issue">
-    <h3>Known Issues</h3>
+    <h3 id="known_issue">Known Issues</h3>
     <p>
         <i>Last updated on Apr. 25, 2023</i>
         <ul>
